<resources>
    <string name="app_name">MLEJ</string>
    <string name="txtUpComingAppointment">Upcoming Appointments</string>
    <string name="profileName">Name</string>
    <string name="profileUserName">Name</string>
    <string name="profileEmail">Email</string>
    <string name="profilePhone">Phone</string>
    <string name="profileAddress">Address</string>
    <string name="profilePostal">Postal Code</string>
    <string name="btnSaveProfile">Save</string>
    <string name="queryHint">Provider Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>